--- a/provisioning/ansible/playbook.yml
+++ b/provisioning/ansible/playbook.yml
@@ -12,7 +12,7 @@
       with_items:
         - linux-headers-generic-lts-raring
       notify: 
-        - command sudo reboot
+        - Restart vm
 
     ## Commented out because buildroot is not available via apt.
     ## TODO: find an alternative method for installing buildroot.
@@ -22,5 +22,10 @@
 
     - name: ensure docker is installed
       apt: pkg=docker state=latest
+      sudo: yes
+
+  handlers:
+    - name: Restart vm
+      command: /sbin/reboot
       sudo: yes
 
